docker/envoy/currency-envoy.yaml
static_resources:
  listeners:
    - name: grpc_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9092
      filter_chains:
        - transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              require_client_certificate: true
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: /certs/currency-spiffe.crt
                    private_key:
                      filename: /certs/currency-spiffe.key
                validation_context:
                  trusted_ca:
                    filename: /certs/ca.crt
                  match_typed_subject_alt_names:
                    - san_type: URI
                      matcher:
                        exact: spiffe://mesh.local/product
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_ingress
                codec_type: HTTP2
                http2_protocol_options: { }
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: currency_service
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: currency_service
      connect_timeout: 2s
      type: STRICT_DNS
      http2_protocol_options: { }
      load_assignment:
        cluster_name: currency_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: currency-app
                      port_value: 9090
